フォーム調整

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="form"> 
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="サーバーを検索" id="serverInput">
+                        <input type="text" class="form-control form-control-lg" placeholder="サーバーを検索" id="serverInput">
                         <a class="input-group-text btn btn-secondary" id="serverButton">検索</a>
                     </div>
                 </div>
