ボタン追加

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="form"> 
                     <div class="input-group mb-3">
                         <input type="text" class="form-control form-control-lg" placeholder="サーバーを検索" id="serverInput">
-                        <a class="input-group-text btn btn-secondary" id="serverButton">検索</a>
+                        <button type="submit" class="btn btn-lg btn-secondary" id="serverButton">検索</button>
                     </div>
                 </div>
                 <div class="serverList row"></div>
