--- a/server.html
+++ b/server.html
@@ -28,18 +28,9 @@
             </nav>
         </header>
 	    <main>
-            <div class="container">
-                <form id="serverForm"> 
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control form-control-lg" placeholder="サーバーを検索" id="serverInput">
-                        <button type="submit" class="btn btn-lg btn-secondary" id="serverButton">検索</button>
-                        <div id="result" class="form-text"></div>
-                    </div>
-                </form>
-                <div class="serverList row"></div>
-            </div>
+            <div class="serverInfo"></div>
 	    </main>
-        <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/server.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
