--- a/server.html
+++ b/server.html
@@ -28,7 +28,16 @@
             </nav>
         </header>
 	    <main>
-            <div class="serverInfo"></div>
+            <div class="serverInfo">
+                <div class="card text-center">
+                    <img src="./assets/img/takasumibot.png" class="card-img-top" width="300" height="300">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
 	    </main>
         <script src="./assets/js/server.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
