--- a/server.html
+++ b/server.html
@@ -28,15 +28,13 @@
             </nav>
         </header>
 	    <main>
-            <div class="serverInfo">
-                <div class="card text-center">
-                    <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
-                    <div class="card-body">
-                      <h5 class="card-title">サーバー名</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      <a href="https://discord.gg/" class="btn btn-outline-secondary" target="_blank">サーバーに参加する</a>
-                    </div>
+            <div class="card text-center serverInfo">
+                <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
+                <div class="card-body">
+                    <h5 class="card-title">サーバー名</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <a href="https://discord.gg/" class="btn btn-outline-secondary" target="_blank">サーバーに参加する</a>
                 </div>
             </div>
 	    </main>
