--- a/server.html
+++ b/server.html
@@ -32,9 +32,9 @@
                 <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
                 <div class="card-body">
                     <h5 class="card-title">サーバー名</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    <a href="https://discord.gg/" class="btn btn-outline-secondary" target="_blank">サーバーに参加する</a>
+                    <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
+                    <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
+                    <p class="card-text"><small class="text-muted">10分前</small></p>
                 </div>
             </div>
 	    </main>
