--- a/server.html
+++ b/server.html
@@ -29,8 +29,10 @@
         </header>
 	    <main>
             <div class="card text-center serverInfo">
-                <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
-                <div class="card-body">
+                <div>
+                    <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
+                </div>
+                <div>
                     <h5 class="card-title">サーバー名</h5>
                     <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
                     <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
