--- a/server.html
+++ b/server.html
@@ -28,15 +28,15 @@
             </nav>
         </header>
 	    <main>
-            <div class="card text-center serverInfo">
-                <div>
+            <div class="serverInfo">
+                <div class="card text-center">
                     <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
-                </div>
-                <div>
-                    <h1 class="card-title">サーバー名</h1>
-                    <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
-                    <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
-                    <p class="card-text"><small class="text-muted">10分前</small></p>
+                    <div>
+                        <h1 class="card-title">サーバー名</h1>
+                        <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
+                        <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
+                        <p class="card-text"><small class="text-muted">10分前</small></p>
+                    </div>
                 </div>
             </div>
 	    </main>
