--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="icon" type="image/png" sizes="1024x1024" href="./assets/img/takasumibot.png">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/main.css">
     </head>
     <body>
         <header>
