--- a/server.html
+++ b/server.html
@@ -30,9 +30,13 @@
 	    <main>
             <div class="serverInfo">
                 <div class="card text-center">
-                    <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
+                    <div class="header">
+                        <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
+                        <div>
+                            <h1 class="card-title">サーバー名</h1>
+                        </div>
+                    </div>
                     <div>
-                        <h1 class="card-title">サーバー名</h1>
                         <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
                         <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
                         <p class="card-text"><small class="text-muted">10分前</small></p>
