--- a/server.html
+++ b/server.html
@@ -30,7 +30,7 @@
 	    <main>
             <div class="serverInfo">
                 <div class="card text-center">
-                    <div class="header">
+                    <div>
                         <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
                         <div>
                             <h1 class="card-title">サーバー名</h1>
