--- a/server.html
+++ b/server.html
@@ -36,7 +36,7 @@
                             <h1 class="card-title">サーバー名</h1>
                         </div>
                     </div>
-                    <div>
+                    <div class="card-body">
                         <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
                         <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
                         <p class="card-text"><small class="text-muted">10分前</small></p>
