--- a/server.html
+++ b/server.html
@@ -32,11 +32,13 @@
                 <div class="card text-center">
                     <div>
                         <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">
-                        <div>
-                            <h1 class="card-title">サーバー名</h1>
-                        </div>
+                        <h1 class="card-title">サーバー名</h1>
                     </div>
                     <div class="card-body">
+                        <p class="card-text">
+                            <span class="badge rounded-pill bg-light text-dark">10がオンライン 13人</span>
+                            <span class="badge rounded-pill bg-danger">2ブースト</span>
+                        </p>
                         <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
                         <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
                         <p class="card-text"><small class="text-muted">10分前</small></p>
