--- a/server.html
+++ b/server.html
@@ -35,10 +35,10 @@
                         <h1 class="card-title">サーバー名</h1>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text"><h5>
                             <span class="badge rounded-pill bg-light text-dark">10がオンライン 13人</span>
                             <span class="badge rounded-pill bg-danger">2ブースト</span>
-                        </p>
+                        </h5></p>
                         <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
                         <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
                         <p class="card-text"><small class="text-muted">10分前</small></p>
