--- a/server.html
+++ b/server.html
@@ -28,31 +28,7 @@
             </nav>
         </header>
 	    <main>
-            <div class="serverInfo">
-                <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb-item"><a href="./">サーバー一覧</a></li>
-                      <li class="breadcrumb-item active">サーバー名</li>
-                    </ol>
-                </nav>
-                <div class="card text-center">
-                    <div>
-                        <img src="./assets/img/takasumibot.png" class="icon" width="150" height="150" alt="サーバーアイコン">         
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title">サーバー名</h1>
-                        <p class="card-text">
-                            <h5>
-                                <span class="badge rounded-pill bg-light text-dark">10がオンライン 13人</span>
-                                <span class="badge rounded-pill bg-danger">2ブースト</span>
-                            </h5>
-                        </p>
-                        <p class="card-text">これはサーバーの説明欄です。これはサーバーの説明欄です。これはサーバーの説明欄です。</p>
-                        <a href="https://discord.gg/" class="btn btn-lg btn-outline-secondary" target="_blank">サーバーに参加する</a>
-                        <p class="card-text"><small class="text-muted">10分前</small></p>
-                    </div>
-                </div>
-            </div>
+            <div class="serverInfo"></div>
 	    </main>
         <script src="./assets/js/server.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
