--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control form-control-lg" placeholder="サーバーを検索" id="serverInput">
                         <button type="submit" class="btn btn-lg btn-secondary" id="serverButton">検索</button>
-                        <div id="result" class="form-text"></div>
+                        <div class="form-text result"></div>
                     </div>
                 </form>
                 <div class="serverList row"></div>
