--- a/404.html
+++ b/404.html
@@ -7,14 +7,14 @@
         <title>404 Not Fount</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="./assets/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-darl mb-0 h1" href="./">
-                        <img src="./assets/img/takasumibot.png" alt="ロゴ" width="30" height="30" class="d-inline-block align-text-top">
+                    <a class="navbar-brand text-darl mb-0 h1" href="/">
+                        <img src="/assets/img/takasumibot.png" alt="ロゴ" width="30" height="30" class="d-inline-block align-text-top">
                         TakasumiBOT Servers
                     </a>
                 </div>
