--- a/404.html
+++ b/404.html
@@ -13,10 +13,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-darl mb-0 h1" href="/">
-                        <img src="/assets/img/takasumibot.png" alt="ロゴ" width="30" height="30" class="d-inline-block align-text-top">
-                        TakasumiBOT Servers
-                    </a>
+                    <a class="navbar-brand text-darl mb-0 h1" href="/">TakasumiBOT Servers</a>
                 </div>
             </nav>
         </header>
