--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <link rel="icon" type="image/png" sizes="1024x1024" href="/assets/img/takasumibot.png">
 
         <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/ fb# prefix属性: https://ogp.me/ns/ prefix属性#">
-        <meta property="og:url" content="https://servers.taka.cf/" />
+        <meta property="og:url" content="https://servers.takasumibot.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="サーバー掲示板" />
         <meta property="og:description" content="TakasumiBOTのサーバー掲示板" />
         <meta property="og:site_name" content="TakasumiBOT Servers" />
-        <meta property="og:image" content="https://servers.taka.cf/assets/img/takasumibot.png" />
+        <meta property="og:image" content="https://servers.takasumibot.com/assets/img/takasumibot.png" />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/assets/css/main.css">
@@ -35,7 +35,7 @@
         </header>
 	    <main>
             <div class="container">
-                <form id="serverForm"> 
+                <form id="serverForm">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control form-control-lg" placeholder="サーバーを検索" id="serverInput">
                         <button type="submit" class="btn btn-lg btn-secondary" id="serverButton">検索</button>
