--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <meta property="og:site_name" content="TakasumiBOT Servers" />
         <meta property="og:image" content="https://servers.takasumibot.com/assets/img/takasumibot.png" />
 
+        <meta name="description" content="TakasumiBOTのサーバー掲示板">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/assets/css/main.css">
     </head>
